  * added project name input when not using Sugar toolbars
  * added print block
  * consolidated various show blocks into one block
  * added 'any' docking parameter
  * fixed bug with new start block after clear all
  * show parameter values on blocks when running in debig mode
  * show and hide blocks
  * added keyboard short cuts
  * added keyboard sensor
  * fixed issue with break block scope
  * label box values during debug mode
  * fixed some race conditions
  * fill broken in save to SVG
  * fix race condition in palettes load
  * hover to invoke copy stack
  * while block (GCI - drakosvlad)
  * not block (GCI - Daksh Shah)
  * and block (GCI - Ignacio Rodriguez)
  * if-then-else block (GCI - Ignacio Rodriguez)
  * camera block for Firefox (GCI - Rafael Cordano)
  * video block for Firefox (GCI - Rafael Cordano)
  * speak block for Firefox (GCI - Rafael Cordano)
  * media blocks in Chrome
  * implement if-then-else, while, until
  * implement and or not
  * fixed problem with block resizing
  * drag palette items
  * query turtle blocks
  * confirm on clear
  * save dialog
  * palettes open by default
  * default start block position needs to move
  * copy stack copies instances instead of making new blocks?
  * enable number names for actions
  * enable number names for turtles
  * enable docking to any for boxes, equal
  * enable number names for boxes
  * fixed the problem with prototypes on the blocks palette
  * fixed highlighting of boolean blocks
  * global collapse stack button
  * smoother hand-off between palette and canvas when dragging blocks

TODO:
  * plugin mechanism
  * use busy cursor where approporate
  * use snap to pixels
  * user defined blocks
  * more sensors
  * i18n
  * RTL support
  * scroll instead of zoom?
  * use graphical error messages
  * preserve collapse state between save/load

BUGS:
  * jumpy scrolling
  * don't save full-sized bitmap to session
  * cannot open same file twice in a row (no change event?)